# gapless-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_06_06_1959-19c4da7a49eb_initial.py  2026_06_08_0001-8f3a1c6d9b24_add_learning_paths.py  2026_06_08_0002-5b3ea99c4a01_add_learning_path_module_progress.py  2026_06_10_0003-3d7f2b9e6c41_add_lesson_blocks.py  2026_06_13_0004-9c2d4e7f1a8b_add_learning_path_feedback_attempts.py
app/: __init__.py  main.py
app/agents/: __init__.py  runner.py
app/agents/tools/: __init__.py  math.py  registry.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: agents.py  assessments.py  auth.py  content.py  learning_paths.py  llm.py  users.py
app/core/: config.py  logging.py  redis.py  security.py
app/crud/: __init__.py  learning_path.py  user.py
app/db/: base.py  session.py
app/models/: __init__.py  learning_path.py  user.py
app/schemas/: __init__.py  agent.py  assessment.py  auth.py  content.py  learning_path.py  llm.py  user.py
app/services/: assessment.py  content.py  learning_feedback.py  llm.py
app/tests/: conftest.py  test_agents.py  test_assessments.py  test_auth.py  test_content.py  test_learning_paths.py  test_llm.py  test_main.py  test_security.py  test_users.py
docs/: content-generate-frontend.md  learning-history-frontend.md
